xxx, S3QL 0.28

  * "s3qlctrl upload-meta" now works even if the file system has
    been mounted with --metadata-upload-interval=0.
    
  * File system metadata is now permanently cached locally. This
    significantly reduces the time required to mount the file
    system.
    

2010-12-11, S3QL 0.27

  * The authinfo file now supports passwords that include 
    white space. 
  
  * The s3qladm command can now be used to download metadata
    backups.
  
  * The --strip-meta option for mount.s3ql has been removed,
    redundant data is now always stripped before upload.

  * mount.s3ql now has a --upstart option so that it can easily
    run as an upstart job. An example job definition is included
    in contrib/s3ql.conf.
    
  * s3qlctrl now has an 'upload-meta' command to trigger a metadata
    upload while the file system is mounted.

  * Fixed a bug that preserved old data when truncating a file
    to zero. If you ever had fsck errors of the form

    Size of inode [ddd] ([filename]) does not agree with number of blocks

    then the affected files may contain additional, old data
    at the end that is not supposed to be there.
    
  
2010-10-30, S3QL 0.26

  * Fixed a problem with the sftp backend failing because it
    tries to access a file locally.

  * Various minor bugfixes

2010-09-28, S3QL 0.25

  * A critical bug that could cause backups to be deleted too 
    early and potentially break the whole backup strategy has 
    been fixed in contrib/expire_backups.py.
    
    The new version has changed semantics that and also copes
    significantly better when backups are made in irregular time
    intervals.  

  * S3QL should now respond with more consistent performance when
    accessing the file system while s3qlcp, s3qllock or s3qlrm
    is running at the same time. 
    
  * When enabling debug output for the `UploadManager` module,
    S3QL now logs detailed messages about de-duplication, upload
    and compression performance.     
