@@ -2,7 +2,9 @@ syntax: regexp
 ^src/llfuse/ctypes_api\.py$
 ^src/s3ql/libc_api\.py$
 ^doc/doctrees$
+^doc/latex$
 ^doc/html$
+^doc/manual.pdf$
 ^src/s3ql\.egg-info$
 ^build$
 ^.pydevproject$
