@@ -1,4 +1,5 @@
 doc/html/
 doc/txt/
+doc/manual.pdf
 README.txt
 contrib/
