@@ -1,6 +1,0 @@
-[sdist]
-formats=bztar
-
-[build_sphinx]
-source-dir = doc/txt
-build-dir  = doc
